# fastapi_management

./: .gitignore  Dockerfile  Readme.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1219e7bc4501_сorrect_migration.py  247c869fa4b3_initial_migration.py
app/core/: main.py
app/core/routers/: orders.py  products.py
app/db/: crud.py  crud_orders.py  crud_products.py  database.py  db_config.py  models.py  schemas.py
app/tests/: test_orders.py
