[tool.poetry]
name = "warehouse_api"
version = "0.1.0"
description = ""
authors = ["Starlight <starlight1997@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.0"}
SQLAlchemy = "^2.0.35"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
pydantic-settings = "^2.5.2"
psycopg = "^3.2.2"
pydantic = "^2.9.2"
psycopg2 = "^2.9.9"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
